material-curso/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voyager
  labels:
    app: voyager
    environment: development
