material-curso/k8s/ingress.yaml
# Requiere instalar el Ingress Controller de NGINX en Kind:
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voyager-ingress
  namespace: voyager
  labels:
    app: voyager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: voyager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 5000
